fixed some small bugs, dark mode actually started looking good, maybe it was just the pc struggling to process the constant changes in the UI

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body{
   /* height: 100vh; */
   font-family: 'Nunito Sans';
   font-weight: 300;
+  /* overflow: hidden; */
 }
 
 #base{
@@ -26,7 +27,7 @@ body{
 }
 
 #base *:not(.countries-grid, .search-sort-container){
-  transition: 500ms;
+  transition: 300ms;
   background: white;
 }
 
@@ -89,12 +90,13 @@ h3{
   text-align: left;
   height: 100%;
   border-radius: 3px;
+  line-height: 100%;
   overflow: hidden;
   /* border: 1px solid grey; */
   /* box-shadow: 0px 5px 5px 2px var(--dark-gray); */
   margin-top: 20px;
-  transition-property: line-height, width, height;
-  transition-duration: 700ms;
+  /* transition-property: line-height, width, height;
+  transition-duration: 700ms; */
   /* margin-bottom: 20px; */
 }
 
@@ -182,7 +184,7 @@ input:focus{
   grid-column: span 4;
   grid-row: span 2;
   grid-row-start: 1;
-  height: 70vh;
+  height: 80vh;
   width: 100%;
   flex-direction: row;
   /* align-items: center; */
@@ -286,9 +288,9 @@ input:focus{
   display: flex;
   height: 60px;
   align-items: center;
-  justify-content: space-between;
-  padding-left: 30px;
-  padding-right: 30px;
+  justify-content: space-around;
+  /* padding-left: 30px; */
+  /* padding-right: 0px; */
 }
 
 #dark-mode-toggle{
@@ -303,7 +305,7 @@ input:focus{
   font-weight: 600;
   color: inherit;
   border: 0;
-  transition: 1s;
+  /* transition: 1s; */
 }
 
 #dark-mode-toggle:hover{
